--- a/index.html
+++ b/index.html
@@ -13079,7 +13079,7 @@ div#notebook {
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="Ruuvi-Fridge">Ruuvi Fridge<a class="anchor-link" href="#Ruuvi-Fridge">&#182;</a></h1><p>This is my first project to collect data with Ruuvi tag from my refrigerator and use that data to machine learning models.</p>
 <h3 id="Data">Data<a class="anchor-link" href="#Data">&#182;</a></h3><p>Temperature and humidity over night in my fridge. Blue lines mark where the fridge's motor starts and stops. Red line is when fridge door is opened.
-<img src="https://github.com/kilkki/ruuvi-fridge/blob/master/graph1.png" alt="Image" title="Data"></p>
+<img src="tmp/ruuvi-fridge/graph1.png" alt="Image" title="Data"></p>
 <p>Motor starts (blue line)</p>
 <ul>
 <li>Temperature decreases</li>
@@ -13094,7 +13094,7 @@ div#notebook {
 <li>Sudden jump in humidity and temperature</li>
 </ul>
 <p>Fridge door opened. Notice rapid raise of humidity and temperature
-<img src="https://github.com/kilkki/ruuvi-fridge/blob/master/Screenshot_2019-11-01%20Ruuvi%20tagit%20-%20door_open.png" alt="Image" title="Door open"></p>
+<img src="tmp/ruuvi-fridge/Screenshot_2019-11-01%20Ruuvi%20tagit%20-%20door_open.png" alt="Image" title="Door open"></p>
 <h3 id="Predicting-temperature-using-Tensor-Flow-and-Recurrent-Neural-Network(RNN)">Predicting temperature using Tensor Flow and Recurrent Neural Network(RNN)<a class="anchor-link" href="#Predicting-temperature-using-Tensor-Flow-and-Recurrent-Neural-Network(RNN)">&#182;</a></h3><p>Predicting temperature in fridge when door is closed is easy but lets see how RNN can handle when fridge door is opened</p>
 <h4 id="Import-libraries">Import libraries<a class="anchor-link" href="#Import-libraries">&#182;</a></h4>
 </div>
